# OOP_Lab6

./: CMakeLists.txt  README.md
include/: factory.h  npc.h  observer.h  visitor.h
src/: factory.cpp  main.cpp  npc.cpp  observer.cpp  visitor.cpp
tests/: test_npc.cpp
